# similarity

./: .gitignore  CHANGES.rst  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
licenses/: LICENSE.rst  README.rst
similarity/: __init__.py  analytical.py  calibrate.py  censored.py  empirical.py  ks.py  similarity.py
similarity/data/Donaldson/: README.md
similarity/data/FIRE/: DMm12f.sn0.2kpc.txt  DMm12f.sn1.2kpc.txt  DMm12f.sn2.2kpc.txt  DMm12f.sn3.2kpc.txt  DMm12f.sn4.2kpc.txt  DMm12f.sn5.2kpc.txt  DMm12f.sn6.2kpc.txt  DMm12f.sn7.2kpc.txt  README.md
similarity/tests/: run_analytictests.py  run_basetests.py  run_censored.py
