[metadata]
name = similarity
author = Michael Petersen
author_email = petersen.michael.s@gmail.com
license = BSD two-clause
license_file = licenses/LICENSE.rst
url = https://github.com/michael-petersen/Similarity
description = Compute the similarity of one-dimensional distributions.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = michael-petersen/Similarity

[options]
package_dir =
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy
    packaging

[options.packages.find]
where = similarity

[options.entry_points]

[options.extras_require]
test =
    numpy
    scipy
    matplotlib
docs =
    numpy
    scipy
    matplotlib

[options.package_data]
similarity =
    *.pyx
    *.pxd

[tool:pytest]
testpaths = "similarity" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    similarity/*setup_package*
    similarity/tests/*
    similarity/*/tests/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
